--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -5,17 +5,25 @@
 
 <table class="centeredTable">
     <tr>
-        @foreach(var column in ViewBag.columns)
+        @foreach (var column in ViewBag.columns)
         {
-            <th>@column.Value</th>
+            if (column.Value == "All")
+            {
+                <th>
+                    <a asp-controller="List" asp-action="Jobs" asp-route-column="@column.Key" asp-route-value="@column.Key">@column.Value</a>
+                </th>
+            }
+            else
+            {
+                <th>@column.Value</th>
+            }
         }
     </tr>
     <tr>
         @{
             //TODO #2: Complete the View Jobs By Category Table
         }
-
-        <td></td> @* Feel free to remove or modify this element if necessary. *@
+        <td></td>
         @foreach (var category in ViewBag.tableChoices)
         {
             <td>
@@ -30,4 +38,4 @@
             </td>
         }
     </tr>
-        </table>
+</table>
