--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -28,6 +28,68 @@
 
     @{
         //TODO #4: Loop over the search results to display all job fields.
+        if (ViewBag.jobs == null) return;
+
+        foreach (var job in ViewBag.jobs)
+        {
+            <table class="job-listing">
+                <tr>
+                    <td>
+                        ID
+                    </td>
+                    <td>
+                        @job.Id
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        Name
+                    </td>
+                    <td>
+                        @job.Name
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        Employer
+                    </td>
+                    <td>
+                        @job.Employer.Value
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        Location
+                    </td>
+                    <td>
+                        @job.Location.Value
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        Position Type
+                    </td>
+                    <td>
+                        @job.PositionType.Value
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        Skill
+                    </td>
+                    <td>
+                        @job.CoreCompetency.Value
+                    </td>
+                </tr>
+
+
+            </table>
+        }
     }
 
 </div>
